--- a/test.html
+++ b/test.html
@@ -2,10 +2,27 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title></title>
+  <title>init.css v1.0.0</title>
   <link rel="stylesheet" href="init.css"/>
   <link href='http://fonts.googleapis.com/css?family=Exo+2:300' rel='stylesheet' type='text/css'>
   <style>
+    /* Base styles */
+    html {
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      font-size: 1em;
+      line-height: 1.375;
+    }
+
+    img, iframe, object, svg,
+    input, textarea, select, progress, keygen, meter {
+      height: 1.375rem;
+    }
+
+    video, audio, select[multiple] {
+      height: 2.75rem;
+    }
+
     /* Property inheritance test.
      * Activate appropriate properties to see if elements inherit this value properly */
     ._inheritance-test {
@@ -15,7 +32,7 @@
       /*color: #0b9b4b;*/                     /*pass*/
       /*direction: rtl;*/                     /*pass*/
       /*empty-cells: hide;*/                  /*needless*/
-      font: normal normal normal 19px/22px "Exo 2"; /*pass*/
+      font: normal normal normal 19px/22px "Exo 2", sans-serif; /*pass*/
       /*object-fit: none;*/                   /*?*/
       /*hyphens: manual;*/                    /*experimental*/
       /*image-rendering: pixelated;*/         /*pass*/
@@ -38,7 +55,7 @@
       /*writing-mode: vertical-rl;*/          /*pass, !input*/
     }
 
-    /* Vertical line grid */
+    /* Test line grid */
     ._grid {
       /* horizontal writing mode */
       background-image: -moz-linear-gradient(top, #fff 21px, #ddd 22px);
@@ -66,8 +83,8 @@
 
     /* Code examples */
     ._code {
-      font-family:monospace;
-      font-size:0.7em;
+      font-family: monospace;
+      font-size: 0.7em;
       -moz-tab-size: 4;
       -o-tab-size: 4;
       tab-size: 4;
@@ -87,7 +104,7 @@
       width: 100%;
     }
 
-    /* Sets */
+    /* Sets of elements */
     .c-gray     { color: #999; }
     .c-green    { color: forestgreen; }
     .c-yellow   { color: gold; }
@@ -97,7 +114,7 @@
     /* Main table */
     table {
       position: relative;
-      width: 960px;
+      width: 940px;
       margin: auto;
       overflow: hidden;
     }
@@ -120,7 +137,7 @@
   -->
 <table>
   <caption>
-    <a href="#0"><h1 id="0" class="fnwg-bold">initcss v0.5</h1></a>
+    <a href="#0"><h1 id="0" class="fnwg-bold">initcss v1.0.0</h1></a>
     <p>Left side uses Emmet abbreviations to represent what you actually see on the right side.<br>Tags always have its own textual representation within.</p>
     <p class="fnwg-bold">Legend:</p>
     <pre>&#9;<span class="c-green">*</span> - almost stylable; possible unstylable/unhideable controls or slightly unexpected behaviour.</pre>
