Update version number and add it to <title>

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title></title>
+  <title>init.css v1.0.0</title>
   <link rel="stylesheet" href="init.css"/>
   <link href='http://fonts.googleapis.com/css?family=Exo+2:300' rel='stylesheet' type='text/css'>
   <style>
@@ -120,7 +120,7 @@
   -->
 <table>
   <caption>
-    <a href="#0"><h1 id="0" class="fnwg-bold">initcss v0.5</h1></a>
+    <a href="#0"><h1 id="0" class="fnwg-bold">initcss v1.0.0</h1></a>
     <p>Left side uses Emmet abbreviations to represent what you actually see on the right side.<br>Tags always have its own textual representation within.</p>
     <p class="fnwg-bold">Legend:</p>
     <pre>&#9;<span class="c-green">*</span> - almost stylable; possible unstylable/unhideable controls or slightly unexpected behaviour.</pre>
