Add html {} and leveling HTML-elements styles

--- a/test.html
+++ b/test.html
@@ -6,6 +6,23 @@
   <link rel="stylesheet" href="init.css"/>
   <link href='http://fonts.googleapis.com/css?family=Exo+2:300' rel='stylesheet' type='text/css'>
   <style>
+    /* Base styles */
+    html {
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      font-size: 1em;
+      line-height: 1.375;
+    }
+
+    img, iframe, object, svg,
+    input, textarea, select, progress, keygen, meter {
+      height: 1.375rem;
+    }
+
+    video, audio, select[multiple] {
+      height: 2.75rem;
+    }
+
     /* Property inheritance test.
      * Activate appropriate properties to see if elements inherit this value properly */
     ._inheritance-test {
