Update common test page styles

--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
       /*color: #0b9b4b;*/                     /*pass*/
       /*direction: rtl;*/                     /*pass*/
       /*empty-cells: hide;*/                  /*needless*/
-      font: normal normal normal 19px/22px "Exo 2"; /*pass*/
+      font: normal normal normal 19px/22px "Exo 2", sans-serif; /*pass*/
       /*object-fit: none;*/                   /*?*/
       /*hyphens: manual;*/                    /*experimental*/
       /*image-rendering: pixelated;*/         /*pass*/
@@ -55,7 +55,7 @@
       /*writing-mode: vertical-rl;*/          /*pass, !input*/
     }
 
-    /* Vertical line grid */
+    /* Test line grid */
     ._grid {
       /* horizontal writing mode */
       background-image: -moz-linear-gradient(top, #fff 21px, #ddd 22px);
@@ -83,8 +83,8 @@
 
     /* Code examples */
     ._code {
-      font-family:monospace;
-      font-size:0.7em;
+      font-family: monospace;
+      font-size: 0.7em;
       -moz-tab-size: 4;
       -o-tab-size: 4;
       tab-size: 4;
@@ -104,7 +104,7 @@
       width: 100%;
     }
 
-    /* Sets */
+    /* Sets of elements */
     .c-gray     { color: #999; }
     .c-green    { color: forestgreen; }
     .c-yellow   { color: gold; }
@@ -114,7 +114,7 @@
     /* Main table */
     table {
       position: relative;
-      width: 960px;
+      width: 940px;
       margin: auto;
       overflow: hidden;
     }
